<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProductMovement_Fragment">

        <Spinner
            android:id="@+id/sprPart"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:minHeight="48dp"
            android:contentDescription="@string/preview1"
            app:layout_constraintBottom_toBottomOf="@+id/tvtPartNo"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvtPartNo" />

        <TextView
            android:id="@+id/tvtPartNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="128dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/part_number"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvtQuantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/quantity"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvtPartNo"
            app:layout_constraintTop_toBottomOf="@+id/sprPart" />

        <Spinner
            android:id="@+id/sprQuan"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/preview2"
            app:layout_constraintBottom_toBottomOf="@+id/tvtQuantity"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvtQuantity" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="129dp" />

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="200dp"
            android:text="@string/submit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Spinner
            android:id="@+id/sprFrom"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/warehouse"
            app:layout_constraintBottom_toBottomOf="@+id/tvWarehouse"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvWarehouse" />

        <Spinner
            android:id="@+id/sprTo"
            android:layout_width="200dp"
            android:layout_height="48dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppins_medium"
            android:contentDescription="@string/factory"
            app:layout_constraintBottom_toBottomOf="@+id/tvFactory"
            app:layout_constraintStart_toStartOf="@+id/guideline2"
            app:layout_constraintTop_toTopOf="@+id/tvFactory" />

        <TextView
            android:id="@+id/tvWarehouse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/from"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvtQuantity"
            app:layout_constraintTop_toBottomOf="@+id/sprQuan" />

        <TextView
            android:id="@+id/tvFactory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/to"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="@+id/tvWarehouse"
            app:layout_constraintTop_toBottomOf="@+id/sprFrom" />

        <ProgressBar
            android:id="@+id/loadingIndi"
            style="?android:attr/progressBarStyle"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>